[package]
name = "octoprint_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["json", "stream"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_path_to_error = "0.1.15"
static_assertions = "1.1.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }

[dev-dependencies]
mockito = "1.2.0"
tokio = { version = "1.35.1", features = ["test-util"] }
